force-app/main/default/objects/Contact/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <label>User Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Site Personnel</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Info Seeker</fullName>
            </value>
            <value>
                <fullName>Trial Participant</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>Trial Alumni</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Pfizer Employee</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>US CO</fullName>
            </value>
            <value>
                <fullName>All Studies</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>ANI</fullName>
            </value>
            <value>
                <fullName>Abbott</fullName>
            </value>
            <value>
                <fullName>Abbvie</fullName>
            </value>
            <value>
                <fullName>EPD</fullName>
            </value>
            <value>
                <fullName>EPO</fullName>
            </value>
            <value>
                <fullName>GPRD</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>