force-app/main/default/objects/Contact/fields/User_Trained__c.field-meta.xml
<CustomField>
    <fullName>User_Trained__c</fullName>
    <label>User Trained</label>
    <type>DateTime</type>
</CustomField>