force-app/main/default/objects/Contact/fields/Voice_Mail__c.field-meta.xml
<CustomField>
    <fullName>Voice_Mail__c</fullName>
    <label>Voice Mail</label>
    <length>10</length>
    <type>Text</type>
</CustomField>